# mrkgnao.github.io

./: .gitignore  CNAME  archive.html  blogtest.cabal  index.html  site.hs  stack.yaml
about/: index.html
contact/: index.html
css/: bootstrap-flex.css  bootstrap-flex.css.map  bootstrap-flex.min.css  bootstrap-flex.min.css.map  bootstrap.css  bootstrap.css.map  bootstrap.min.css  bootstrap.min.css.map  custom.css  docs.css  docs.min.css  docs.min.css.map  iosevka.css  reset.css  style.css
drafts/normalisation-by-evaluation/: index.html
posts/: 2016-08-21-in-which.md  2016-08-24-prime-ideals.md  2016-12-13-schemes-master.md  2016-12-14-schemes-i.md  2016-12-14-schemes-part-i.md  2016-12-23-p-adics.md
posts/normalisation-by-evaluation/: index.html
templates/: default.html  default_post.html  minified-latex-macros.html  nav.html  post-list.html
things-i-like/: index.html
